--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
-
+spring.datasource.url=jdbc:mysql://localhost:3306/fakestore
+spring.datasource.username=root
+spring.datasource.password=Avijit@3834
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
