--- a/pom.xml
+++ b/pom.xml
@@ -54,6 +54,12 @@
             <version>5.2.1</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/org.springframework.data/spring-data-jpa -->
+        <dependency>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-jpa</artifactId>
+            <version>3.1.5</version>
+        </dependency>
 
 
     </dependencies>
